Update build config and fake socket messages generator
* Add production conditions to fuse.js
* Update fake socket messages generator to generate contacts from the existing store
* Update visual part a little

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "uglify-js": "^3.3.9"
   },
   "scripts": {
+    "test": "jest",
     "start": "node fuse.js",
-    "test": "jest"
+    "build": "NODE_ENV=production node fuse.js"
   },
   "repository": {
     "type": "git",
