--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "src/app.ts",
   "private": true,
   "dependencies": {
-    "faker": "^4.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-virtualized": "^9.18.5",
     "redux": "^3.7.2",
-    "styled-components": "^3.1.5",
-    "typescript-styled-plugin": "^0.4.0"
+    "styled-components": "^3.1.5"
   },
   "devDependencies": {
     "@types/faker": "^4.1.2",
@@ -21,11 +19,13 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.15",
     "@types/react-virtualized": "^9.7.12",
+    "faker": "^4.1.0",
     "fuse-box": "^3.1.3-next.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.2.0",
     "ts-jest": "^22.0.3",
     "typescript": "^2.7.1",
+    "typescript-styled-plugin": "^0.4.0",
     "uglify-es": "^3.3.10",
     "uglify-js": "^3.3.9"
   },
@@ -33,7 +33,7 @@
     "test": "jest",
     "start": "node fuse.js",
     "build": "rm -rf .fusebox && NODE_ENV=production node fuse.js",
-    "generateItems": "typescript helpers/generateItems.ts"
+    "generateItems": "tsc ./src/helpers/generateItems.ts && node ./src/helpers/generateItems.js"
   },
   "repository": {
     "type": "git",
